--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # The directory Mix will write compiled artifacts to.
+/stream_processor/_build/dev/lib/
 /stream_processor/_build/
-
 # If you run "mix test --cover", coverage assets end up here.
 /cover/
 
