--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,26 @@
-/_build
-/cover
-/deps
-/doc
+# The directory Mix will write compiled artifacts to.
+/stream_processor/_build/dev/lib/
+/stream_processor/_build/
+# If you run "mix test --cover", coverage assets end up here.
+/cover/
+
+# The directory Mix downloads your dependencies sources to.
+/stream_processor/deps/
+
+# Where third-party dependencies like ExDoc output generated docs.
+/doc/
+
+# Ignore .fetch files in case you like to edit your project deps locally.
 /.fetch
+
+# If the VM crashes, it generates a dump, let's ignore it too.
 erl_crash.dump
+
+# Also ignore archive artifacts (built via "mix archive.build").
 *.ez
-*.beam
-/config/*.secret.exs
-.elixir_ls/
+
+# Ignore package tarball (built via "mix hex.build").
+stream_processor-*.tar
+
+# Temporary files, for example, from tests.
+/tmp/
